--- a/src/components/Products/css/Products.scss
+++ b/src/components/Products/css/Products.scss
@@ -149,3 +149,53 @@
     }
 
 }
+
+.available_container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5rem;
+    background: rgb(231, 231, 231);
+    padding: 1rem 0;
+    border-radius: 3rem;
+
+    img{
+        margin-top: 2rem;
+        width: 50%;
+    }
+
+    h2{
+        margin-top: 2rem;
+        font-size: 3rem;
+    }
+
+
+    @media (max-width:768px) {
+        h2{
+            font-size: 1.5rem;
+        }
+    }
+
+}
+
+.partner_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5rem;
+
+    .img_row{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        margin-top: 2rem;
+
+        img{
+            width: 25%;
+        }
+    }
+}
